--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* Badges */
+  .badge--sm {
+    @apply inline-flex items-center justify-center border rounded-full text-xs py-0.5 px-1.5;
+  }
+  .badge--md {
+    @apply badge--sm text-sm py-0.5 px-2;
+  }
+  .badge--lg {
+    @apply badge--sm text-sm py-1 px-2.5;
+  }
+  .badge--brand {
+    @apply border-indigo-200 text-indigo-700 bg-indigo-50;
+  }
+  .badge--danger {
+    @apply border-red-200 text-red-600 bg-red-50;
+  }
+  .badge--neutral {
+    @apply border-neutral-200 text-neutral-600 bg-gray-50;
+  }
+  .badge--success {
+    @apply border-green-200 text-green-700 bg-green-50;
+  }
+  .badge--warning {
+    @apply border-amber-200 text-amber-700 bg-amber-50;
+  }
+  /* Buttons */
+}
