--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,14 @@
 @tailwind utilities;
 
 @layer components {
+  /*-------*/
+  /* Badge */
+  /*-------*/
   .__badge--base {
-    @apply inline-flex items-center justify-center border rounded-full;
+    @apply inline-flex items-center justify-center border rounded-full text-xs py-0.5 px-1.5;
   }
   .badge--sm {
-    @apply __badge--base text-xs py-0.5 px-1.5;
+    @apply __badge--base;
   }
   .badge--md {
     @apply __badge--base text-sm py-0.5 px-2;
@@ -15,6 +18,9 @@
   .badge--lg {
     @apply __badge--base text-sm py-1 px-2.5;
   }
+  /*----------*/
+  /* Variants */
+  /*----------*/
   .badge--brand {
     @apply border-indigo-200 text-indigo-700 bg-indigo-50;
   }
@@ -29,5 +35,83 @@
   }
   .badge--warning {
     @apply border-amber-200 text-amber-700 bg-amber-50;
+  }
+  /*------*/
+  /* Link */
+  /*------*/
+  .__link--base {
+    @apply p-0;
+  }
+  /*--------*/
+  /* Button */
+  /*--------*/
+  .__btn--base {
+    @apply rounded p-2.5 focus:outline-none focus:ring;
+    .icon {
+      @apply h-5 w-5;
+    }
+    .text {
+      @apply text-sm font-medium;
+    }
+    .wrapper {
+      @apply flex items-center justify-center gap-x-1 px-1;
+    }
+  }
+  .btn--md {
+    @apply __btn--base;
+  }
+  .btn--lg {
+    @apply __btn--base p-3;
+    .text {
+      @apply text-base;
+    }
+    .wrapper {
+      @apply px-1.5 gap-x-1.5;
+    }
+  }
+  .btn--xl {
+    @apply __btn--base p-3.5;
+    .text {
+      @apply text-base;
+    }
+    .wrapper {
+      @apply px-2 gap-x-2.5;
+    }
+  }
+  .btn--2xl {
+    @apply __btn--base p-4;
+    .icon {
+      @apply h-6 w-6;
+    }
+    .text {
+      @apply text-lg;
+    }
+    .wrapper {
+      @apply px-2.5 gap-x-3.5;
+    }
+  }
+  /*----------*/
+  /* Variants */
+  /*----------*/
+  .btn--primary {
+    @apply text-white bg-indigo-700 hover:bg-indigo-800 focus:ring-indigo-200
+    focus:bg-indigo-800 disabled:pointer-events-none disabled:text-neutral-400
+    disabled:bg-neutral-100;
+  }
+  .btn--secondary {
+    @apply text-neutral-900 bg-white border border-neutral-200 shadow
+    hover:bg-neutral-50 focus:ring-indigo-200 focus:bg-neutral-50
+    disabled:border-none disabled:shadow-none disabled:pointer-events-none
+    disabled:text-neutral-400 disabled:bg-neutral-100;
+  }
+  .btn--tertiary {
+    @apply text-indigo-700 bg-white hover:bg-neutral-50 focus:ring-indigo-200
+    focus:bg-neutral-50 disabled:pointer-events-none disabled:text-neutral-400
+    disabled:bg-white;
+  }
+  .btn--destructive {
+    @apply text-white bg-red-600 hover:bg-red-700 focus:ring-red-200
+    focus:bg-red-700 disabled:pointer-events-none disabled:text-neutral-400
+    disabled:bg-white;
   }
 }
